Implement Initial Error Function Optimization

--- a/TrigEncodingCompression.csproj
+++ b/TrigEncodingCompression.csproj
@@ -36,7 +36,18 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurveFitter.cs" />
+    <Compile Include="ErrorFunctions.cs" />
+    <Compile Include="PredictorFunctions.cs" />
     <Compile Include="Program.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
