Implement Residual Visualization

--- a/TrigEncodingCompression.csproj
+++ b/TrigEncodingCompression.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A152E74E-2682-4394-9F10-77E08CC56C7F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>TrigEncodingCompression</RootNamespace>
     <AssemblyName>TrigEncodingCompression</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -32,10 +32,19 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BarCharCheck.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BarCharCheck.Designer.cs">
+      <DependentUpon>BarCharCheck.cs</DependentUpon>
+    </Compile>
     <Compile Include="CurveFitter.cs" />
     <Compile Include="ErrorFunctions.cs" />
     <Compile Include="PredictorFunctions.cs" />
@@ -46,8 +55,17 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BarCharCheck.resx">
+      <DependentUpon>BarCharCheck.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
